appId: com.gayi.app
---
- launchApp
- assertVisible: "Outing"
- tapOn: "Find my trip"
- assertVisible: "Quiz"
